Functional OAuth and JWT in the frontend

--- a/frontend/src/i18n/locales/ca.json
+++ b/frontend/src/i18n/locales/ca.json
@@ -4,7 +4,15 @@
     "createAccount": "Create account",
     "createNewAccount": "Create New Account",
     "email": "Email",
+    "username": "Username",
     "login": "Login",
+    "login_oauth": "Login with OAuth Provider",
+    "title_oauth_validating": "Validating OAuth access code...",
+    "title_oauth_generating": "Generating token and logging in...",
+    "title_oauth_error": "Error logging in",
+    "title_oauth_synchronizing": "Synchronizing user data...",
+    "error": "An error occurred while authenticating...",
+    "error_countdown_detail": "seconds before returning to login page.",
     "password": "Password",
     "recover_password": "Recover password",
     "sign_up": "Sign Up",
