Trying to restructure to improve the build.

--- a/frontend/src/i18n/locales/ca.json
+++ b/frontend/src/i18n/locales/ca.json
@@ -514,6 +514,7 @@
     "logout": "Logout",
     "profile": "My Profile",
     "linkedAccount": "Linked Account",
+    "linkAccount": "Link Account",
     "scopes": "Scopes",
     "linked": "Linked",
     "notLinked": "Not Linked",
